--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -7,23 +7,24 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary">
+        android:layout_height="75dp"
+        android:background="@color/colorPrimary">
         <TextView
             android:id="@+id/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="35dp"
             android:textColor="#fff"
             android:textSize="24sp" />
-        <Button
+        <ImageView
             android:id="@+id/back_button"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="35dp"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/ic_launcher_foreground"/>
+            android:background="@drawable/turn_back"/>
     </RelativeLayout>
 
     <ListView
